Fixed accidentally changed code